# robotica16

./: robot.py  robot2.py
android_imu/: imu_receiver.py
camera_info/: frames.gv  head_camera.old.yaml  head_camera_webcam.yaml
chama_servico_mapa/: CMakeLists.txt  package.xml
chama_servico_mapa/scripts/: chama_mapa.py
computer_vision_examples/: CMakeLists.txt
computer_vision_examples/scripts/: match_keypoints.py  track_meanshift_keypoints.py  visualize_sift.py
config/: checkandfork.py  commands_simulator.sh
exemplo_python/: CMakeLists.txt  package.xml
exemplo_python/scripts/: exemplo_python_code.py  exemplo_python_code.py~
my_pf/: CMakeLists.txt
my_pf/cfg/: STARPose.cfg
neato_robot/neato_node/: CMakeLists.txt  package.xml
neato_robot/neato_node/launch/: bringup.launch  bringup_minimal.launch
neato_robot/neato_node/nodes/: neato.py
neato_robot/neato_node/src/: fix_scan_fast.cpp
planejamento/: planner.prolog  plannerGNU.prolog  prolog_basics.ipynb
semana2/: robot.py
simple_filter/: CMakeLists.txt  package.xml
visao1/: Atividade1_ProjetoVisao.ipynb  Visao Aula 1.ipynb  aula1_conda.ipynb  videoplay.py
visao2/: Feature detectors.ipynb  houghlines.py  py_feature_homography.py  webcam
visao5/: ch4_ar_cube.py  ch4_ar_cube_alt.py  tmp.pgm
visao_projeto/: EstudoMatrizesSistemas.ipynb  ProjetoVisao_etapa1.ipynb  ProjetoVisao_etapa2.ipynb  RotatedPattern.ipynb  TesteGeometricTransform.ipynb
visao_projeto2/: ProjetoVisao_etapa2.ipynb  camera.py  ch4_ar_cube.py  ch4_ar_cube_webcam.py  cv_adapted.py  cv_adapted_webcam.py  ransac.py  sift.py
(+39 files in other folders)
